fix: add text alignment to droplowns
fix: add text alignment to droplowns

closes telerik/kendo-angular-dropdowns#75 (#55)

--- a/packages/default/styles/dropdowns/_layout.scss
+++ b/packages/default/styles/dropdowns/_layout.scss
@@ -17,6 +17,7 @@ $input-indent: .33em;
     overflow: visible;
     border-width: 0;
     vertical-align: middle;
+    text-align: left;
 }
 
 .k-autocomplete,
